--- a/Prototype 1/public/abonnementCSS.css
+++ b/Prototype 1/public/abonnementCSS.css
@@ -27,11 +27,12 @@ body {
   flex-direction: column;
   justify-content: space-between;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ajout de l'ombre */
-  transition: box-shadow 0.3s ease; /* Transition pour l'ombre */
+  transition: transform 0.3s ease;
+  
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Ombre plus prononcée au survol */
+  transform: scale(1.05);
 }
 
 .card h2 {
