--- a/Prototype 1/views/Pages/connexion.ejs
+++ b/Prototype 1/views/Pages/connexion.ejs
@@ -2,6 +2,7 @@
 
 <!-- Template : https://mdbootstrap.com/docs/standard/extended/login/#login-basic-example-->
 
+
     <section class="h-100 gradient-form" >
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
@@ -16,7 +17,7 @@
                           style="width: 185px;" alt="logo">
                       </div>
       
-                      <form action="/connexion/submit" method="post">
+                      <form action="/connexion/submit" method="post" id="loginForm">
                         <h4>Connectez-vous sur votre compte</h4>
                         <br><br>
       
@@ -38,15 +39,12 @@
       
                         <div class="align-items-center justify-content-center pb-4">
                           <p class="mb-0 me-2">Vous n'avez pas un compte?</p>
-                          <button href="/Inscription" type="button" class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3 top-50 start-50">S'inscrire!</button>
+                          <a href="/Inscription" type="button" class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3 top-50 start-50">S'inscrire!</a>
                         </div>
       
-                      </form>
-      
-<script>        document.getElementById('loginForm').addEventListener('submit', function(event) {             event.preventDefault();             
-var username = document.getElementById('username').value;             var password = document.getElementById('password').value;                         
-// Send username and password to server // You will use AJAX or Fetch API for this
- }); </script>
+                      </form>   
+
+   <div id="alerteErreur" style="display: none;" class="alert alert-danger" role="alert"></div>
                     </div>
                   </div>
                   <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
@@ -63,3 +61,36 @@ var username = document.getElementById('username').value;             var passwo
           </div>
         </div>
       </section>
+
+      <script src="/connexion.js"></script>
+      <!-- 
+        <script>
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+          event.preventDefault();
+          var adresse_mail = document.getElementById('adresse_mail').value;
+          var mdp = document.getElementById('mdp').value;
+        
+          fetch('/connexion/submit', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ adresse_mail: adresse_mail, mdp: mdp })
+          })
+          .then(response => response.json())
+          .then(data => {
+            if (data.success) {
+              window.location.href = '/';
+            } else {
+              var alertPlaceholder = document.getElementById('alertPlaceholder');
+              alertPlaceholder.style.display = 'block';
+              alertPlaceholder.textContent = data.message;
+            }
+          })
+          .catch((error) => {
+            console.error('Error:', error);
+          });
+        });
+        </script>
+       -->
+      
