--- a/Prototype 1/views/Pages/Inscription.ejs
+++ b/Prototype 1/views/Pages/Inscription.ejs
@@ -6,7 +6,7 @@
                     <div class="card bg-dark text-white" style="border-radius: 1rem;">
                         <div class="card-body p-5 text-center" >
 
-                            <form class="mb-md-5 mt-md-4 pb-5" action="/inscription/submit" method="post">
+                            <form class="mb-md-5 mt-md-4 pb-5" action="/inscription/submit" method="post" id="SignInForm">
 
                                 <h2 class="fw-bold mb-2 text-uppercase">Inscription</h2>
                                 <p class="text-white-50 mb-5">Veuillez entrer vos informations!</p>
@@ -18,19 +18,19 @@
                                 </div>
 
                                 <div class="form-outline form-white mb-4">
-                                    <input name="prenom_client" type="prenom" id="inputFormPrenom" class="form-control form-control-lg"
+                                    <input name="prenom_client"  id="inputFormPrenom" class="form-control form-control-lg"
                                         placeholder="Prénom" />
 
                                 </div>
 
                                 <div class="form-outline form-white mb-4">
-                                    <input name="courriel_client" type="courriel" id="inputFormCourriel" class="form-control form-control-lg"
+                                    <input name="courriel_client" type="email" id="inputFormCourriel" class="form-control form-control-lg"
                                         placeholder="Courriel électronique" />
 
                                 </div>
 
                                 <div class="form-outline form-white mb-4">
-                                    <input name="mdp_client" type="mdp" id="inputFormMdp" class="form-control form-control-lg"
+                                    <input name="mdp_client" type="password" id="inputFormMdp" class="form-control form-control-lg"
                                         placeholder="Mot de passe" />
 
                                 </div>
@@ -42,6 +42,8 @@
 
                                 <button type="submit" class="btn btn-outline-light btn-lg px-5" >S'inscrire</button>
 
+                                <div id="alerteErreur" style="display: none;" class="alert alert-danger" role="alert"></div>
+
                             </form>
 
                         </div>
@@ -50,4 +52,6 @@
             </div>
         </div>
     </section>
+
+    <script src="/inscription.js"></script>
     <%- include ("../partials/footer.ejs") %>
