--- a/Prototype 1/views/Pages/connexion.ejs
+++ b/Prototype 1/views/Pages/connexion.ejs
@@ -1,8 +1,8 @@
-<%- include ("../partials/header.ejs") %>
+<%- include ("../partials/head.ejs") %>
 
 <!-- Template : https://mdbootstrap.com/docs/standard/extended/login/#login-basic-example-->
-
-
+<!-- https://dribbble.com/session/new-->
+<script src="https://apis.google.com/js/platform.js" async defer></script>
     <section class="h-100 gradient-form" >
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
@@ -11,36 +11,37 @@
                 <div class="row g-0">
                   <div class="col-lg-6">
                     <div class="card-body p-md-5 mx-md-4">
-      
-                      <div class="text-center">
-                        <img src="/imgs/loginpng.jpg"
-                          style="width: 185px;" alt="logo">
-                      </div>
-      
                       <form action="/connexion/submit" method="post" id="loginForm">
-                        <h4>Connectez-vous sur votre compte</h4>
+                        <h3>Connectez-vous à EnerGymize</h3>
+                        <br><br>
+                        <div class="g-signin2" data-onsuccess="onSignIn"></div>
                         <br><br>
       
                         <div class="form-outline mb-4">
-                          <input type="email" id="adresse_mail" name="adresse_mail" class="form-control"
-                            placeholder="Numéro de téléphone ou adresse e-mail" />
                           <label class="form-label" for="form2Example11">Nom d'utilisateur</label>
+                          <input type="email" id="adresse_mail" name="adresse_mail" class="form-control black-hover"
+                            placeholder="Numéro de téléphone ou adresse e-mail" />
+                          
                         </div>
       
                         <div class="form-outline mb-4">
-                          <input type="password" id="mdp" name="mdp" class="form-control"/>
                           <label class="form-label" for="form2Example22">Mot de passe</label>
+                          <input type="password" id="mdp" name="mdp" class="form-control black-hover" />
+                          
                         </div>
       
-                        <div class="text-center pt-1 mb-5 pb-1">
-                          <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">Se connecter</button><br>
+                        
+                        <div class="text-center pt-1 mb-5 pb-1 d-flex flex-column">
+                          <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">Se connecter</button>
                           <a class="text-muted" href="#!">Mot de passe oublié?</a>
                         </div>
-      
-                        <div class="align-items-center justify-content-center pb-4">
+                        
+                        <div class="align-items-center justify-content-center pb-4 d-flex flex-column">
                           <p class="mb-0 me-2">Vous n'avez pas un compte?</p>
-                          <a href="/Inscription" type="button" class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3 top-50 start-50">S'inscrire!</a>
+                          <a href="/Inscription" type="button" class="text-muted">S'inscrire!</a>
                         </div>
+                        
+                        
       
                       </form>   
 
@@ -48,11 +49,16 @@
                     </div>
                   </div>
                   <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-                    <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                      <h4 class="mb-4">Dépassez les limites avec Energymize</h4>
-                      <p class="medium mb-0">Votre univers d'entraînement et de nutrition sur mesure. Découvrez des programmes spécialisés pour le gym, 
-                        le hockey, le football américain, le soccer et le basketball. Avec nos trackers d'entraînement et de nutrition, atteignez vos objectifs 
-                        de performance comme jamais auparavant.</p>
+                    <div class="d-flex flex-column align-items-center ">
+                      <div class="text-center mb-4">
+                        <img src="/imgs/whiteTransp.png" style="width: 185px;" alt="logo">
+                      </div>
+                      <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                        <h4 class="mb-4">Dépassez les limites avec Energymize</h4>
+                        <p class="medium mb-0">Votre univers d'entraînement et de nutrition sur mesure. Découvrez des programmes spécialisés pour le gym, 
+                          le hockey, le football américain, le soccer et le basketball. Avec nos trackers d'entraînement et de nutrition, atteignez vos objectifs 
+                          de performance comme jamais auparavant.</p>
+                      </div>
                     </div>
                   </div>
                 </div>
