--- a/Prototype 1/views/partials/head.ejs
+++ b/Prototype 1/views/partials/head.ejs
@@ -10,4 +10,6 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="/googleStyle.css">
+
 </head>
