--- a/Prototype 1/views/partials/head.ejs
+++ b/Prototype 1/views/partials/head.ejs
@@ -12,4 +12,5 @@
 
     <link rel="stylesheet" href="/googleStyle.css">
 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
