--- a/Prototype 1/views/Pages/index.ejs
+++ b/Prototype 1/views/Pages/index.ejs
@@ -1,9 +1,10 @@
 <%- include ("../partials/header.ejs") %>
 <h1 style="text-align: center; font-size: 3rem; font-family:sans-serif; padding-top: 3rem; color:white; padding-bottom: 3rem;">Dominez chaque défi</h1>
 <div class="indexPresentation">
-    <a href="/indexSport?id_sport=1&name=hockey&image=hockeyIcon.png" class="indexSportImgContainer">
-        <img src="/imgs/hockeyIcon.png">
-    </a>
+    <form action="/index/choisir" method="POST" class="indexSportImgContainer">
+        <input type="hidden" name="id_sport" value="1">
+        <input type="image" src="/imgs/hockeyIcon.png">
+    </form>
     <a href="/indexSport?id_sport=2&name=musculation&image=dumbbellIcon.png" class="indexSportImgContainer">
         <img src="/imgs/dumbbellIcon.png">
     </a>
