--- a/Prototype 1/views/partials/navbarLoggedIn.ejs
+++ b/Prototype 1/views/partials/navbarLoggedIn.ejs
@@ -18,7 +18,7 @@
 <main>
     <% if (user) { %>
         <div style="color: white; text-align: center;">
-            <h1><%= user.prenom_client %> <%= user.nom_client %></h1>
+            <h1><%= user.prenom %> <%= user.nom %></h1>
         </div>
         <% } %>
     
