--- a/Prototype 1/views/partials/navbarLoggedIn.ejs
+++ b/Prototype 1/views/partials/navbarLoggedIn.ejs
@@ -10,7 +10,7 @@
     </a>
 
     <div class="indexHeaderSection">
-        <button class="indexButton1"style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Nous contacter</button>
+        <a href="/App" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;" class="indexButton1">Ouvrir l'application</a>
         <a href="/Abonnement" class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">Abonnements</a>
     </div>
 </div>
