--- a/Prototype 1/views/Pages/profile.ejs
+++ b/Prototype 1/views/Pages/profile.ejs
@@ -28,28 +28,28 @@
         <div class="col-md-8">
             <div class="row mb-2">
                 <div class="col-sm-2 theme-black">Id</div>
-                <div class="col-sm-4 theme-yellow"><%= user.id_client %></div>
+                <div class="col-sm-4 theme-yellow"><%= user._id %></div>
             </div>
             <!-- Répétez pour les autres lignes d'informations -->
             <div class="row mb-2">
                 <div class="col-sm-2 theme-black">Nom</div>
-                <div class="col-sm-4 theme-yellow"><%= user.nom_client %></div>
+                <div class="col-sm-4 theme-yellow"><%= user.nom %></div>
             </div>
             <div class="row mb-2">
                 <div class="col-sm-2 theme-black">Prenom</div>
-                <div class="col-sm-4 theme-yellow"><%= user.prenom_client %></div>
+                <div class="col-sm-4 theme-yellow"><%= user.prenom %></div>
             </div>
             <div class="row mb-2">
                 <div class="col-sm-2 theme-black">Courriel</div>
-                <div class="col-sm-4 theme-yellow"><%= user.courriel_client %></div>
+                <div class="col-sm-4 theme-yellow"><%= user.courriel %></div>
             </div>
             <div class="row mb-2">
                 <div class="col-sm-2 theme-black">Generations Restantes</div>
-                <div class="col-sm-4 theme-yellow"><%= user.gen_restants %></div>
+                <div class="col-sm-4 theme-yellow"><%= user.gen_restante %></div>
             </div>
             <div class="row mb-2">
                 <div class="col-sm-2 theme-black">Abonnement</div>
-                <div class="col-sm-4 theme-yellow"><%= abonnement.nom_abonnement %></div>
+                <div class="col-sm-4 theme-yellow"><%= abonnement.nom_Abonnement %></div>
             </div>
         </div>
         <!-- Colonne pour l'image, placée à la droite des détails -->
