--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -9,17 +9,14 @@
                 <i class="fa-solid fa-calendar-days icons" style="color: #000000;" name="calendarIcon"></i>
             </a>
     
-            <a>
+            <a id="profileIcon">
                 <i class="fa-solid fa-user icons" style="color: #000000;" name="profileIcon"></i>
             </a>
-    
+            
             <a>
                 <i class="fa-sharp fa-solid fa-plus icons" style="color: #000000;" name="plusIcon"></i>
             </a>
            
-            
-           
-    
             <a href="/">
                 <i class="fa-solid fa-right-from-bracket icons" style="color: #000000;" name="exitIcon"></i>
             </a>
@@ -90,9 +87,5 @@
 
 
 <script src="https://kit.fontawesome.com/df1a2f4d51.js" crossorigin="anonymous"></script>
-<script> document.getElementById("profileIcon").addEventListener("click", function() {
-    var profilePage = document.querySelector(".profile-page");
-    profilePage.classList.toggle("hidden");
-    profilePage.classList.toggle("show");
-});</script>
+<script src="/app.js"></script>
 <%- include ("../partials/footer.ejs") %>
