--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -5,20 +5,24 @@
 
 <body>
     <div class="side-bar">
-            <a>
+            <a id="calendarIcon">
                 <i class="fa-solid fa-calendar-days icons" style="color: #000000;" name="calendarIcon"></i>
+                <span>Calendrier</span>
             </a>
     
             <a id="profileIcon">
                 <i class="fa-solid fa-user icons" style="color: #000000;" name="profileIcon"></i>
+                <span>Profile</span>
             </a>
             
-            <a>
+            <a id="plusIcon"> 
                 <i class="fa-sharp fa-solid fa-plus icons" style="color: #000000;" name="plusIcon"></i>
+                <span>Entrainements</span>
             </a>
            
-            <a href="/">
+            <a href="/" id="exitIcon">
                 <i class="fa-solid fa-right-from-bracket icons" style="color: #000000;" name="exitIcon"></i>
+                <span>Acceuil</span>
             </a>
     
         
